fix: hide overflowed image on photo content, change clearfix

--- a/src/components/MessageContent/Content/Photo/Photo.css
+++ b/src/components/MessageContent/Content/Photo/Photo.css
@@ -3,12 +3,15 @@
 :root {
   --message-photo-max-width: 400px;
   --message-photo-max-height: 300px;
+  --message-photo-border-raduis: var(--default-border-radius);
 }
 
 .root {
   all: initial;
+  overflow: hidden;
   max-width: var(--message-photo-max-width);
   height: auto;
   max-height: var(--message-photo-max-height);
   border: 0;
+  border-radius: var(--message-photo-border-raduis);
 }
